[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phanns-tools"
version = "0.1.0"
description = "A collection of miscellaneous tools for the PhANNs project"
requires-python = ">= 3.8"
authors = [
  {name = "Sean Fahey", email = "seanfahey21@gmail.com"},
]
dependencies = [
    "biopython==1.84",
    "numpy==2.1.2",
    "pip==22.3.1",
    "setuptools==65.5.0",
    "toml==0.10.2"
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Bio-Informatics",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",

  "Operating System :: OS Independent",
]
urls = { "repository" = "https://github.com/seanfahey1/phanns-tools.git" }


[tool.setuptools]
packages = ["src"]

[project.scripts]
annotation_cleanup = "src.annotation_cleanup:main"
cluster_deletion = "src.OTH_cluster_deletion:main"
train_test_split_random = "src.train_test_split_random:main"
